--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ section {
     object-fit: cover;
 }
 
-.banner .contentBx {
+.banner .contentBx,
+.sidebar {
     position: absolute;
     top: 0;
     right: 0;
@@ -112,4 +113,71 @@ p {
     text-decoration: none;
     font-weight: 500;
     letter-spacing: 2px;
+}
+
+.sidebar {
+    position: fixed;
+    background: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    padding: 40px;
+    z-index: 99;
+    right: -100%;
+}
+
+.sidebar.active {
+    right: 0;
+
+}
+
+.sidebar ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.sidebar ul li {
+    list-style: none;
+}
+
+.sidebar ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 2em;
+    margin: 10px 0;
+    font-weight: 300;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.sidebar ul li a:hover {
+    color: #00bcd4;
+}
+
+.sci {
+    position: absolute;
+    left: 100px;
+    bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sci li {
+    margin-right: 10px;
+    list-style: none;
+}
+
+.sci li img {
+    transform: scale(0.5);
+    opacity: 0.7;
+}
+
+.sci li img:hover {
+    transform: scale(1);
+    opacity: 1;
+    transition: 0.5s ease-in-out;
 }
