--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 .toggle {
@@ -180,4 +181,119 @@ p {
     transform: scale(1);
     opacity: 1;
     transition: 0.5s ease-in-out;
+}
+
+.title {
+    width: 100%;
+    text-align: center;
+}
+
+.title h2 {
+    position: relative;
+    color: #00bcd4;
+    font-size: 1.8em;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+.title p {
+    max-width: 700px;
+    display: inline-block;
+}
+
+.title h2::before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -10px;
+    width: 60px;
+    height: 4px;
+    background: #000;
+}
+
+.title.white h2,
+.title.white p {
+    color: #fff;
+}
+
+.title.white h2::before {
+    background: #fff;
+}
+
+.about {
+    background: #000;
+}
+
+.about .content {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+.about .content .textBx {
+    min-width: 49%;
+    width: 49%;
+}
+
+.about .content .textBx p {
+    color: #fff;
+}
+
+.about .content .imgBx {
+    margin-left: 40px; 
+}
+
+.about .content .imgBx img {
+    max-width: 100%;
+}
+
+.services .content {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.services .content .servicesBx {
+    padding: 40px 20px;
+    max-width: 340px;
+    margin: 20px;
+    transition: 0.5s;
+    text-align: center;
+    background: #f5f5f5;
+}
+
+.services .content .servicesBx:hover {
+    background: #000;
+}
+
+.services .content .servicesBx img {
+    max-width:  80px;
+    transition: 0.5s;
+}
+
+.services .content .servicesBx:hover img {
+    filter: invert(1);
+}
+
+.services .content .servicesBx h2 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    transition: 0.5s;
+}
+
+.services .content .servicesBx:hover h2 {
+    color: #fff;
+}
+
+.services .content .servicesBx p {
+    margin: 0;
+    transition: 0.5s;
+}
+
+.services .content .servicesBx:hover p {
+    color: #fff;
 }
